Исправление отображения дат и времени. Изменение стилей занятий

--- a/src/assets/styles/eventTypes.css
+++ b/src/assets/styles/eventTypes.css
@@ -4,13 +4,13 @@
 }
 
 .green-background {
-    background-color: green;
+    background-color: #8CED7C;
 }
 
 .yellow-background {
-    background-color: yellow;
+    background-color: #FFCD6D;
 }
 
 .red-background {
-    background-color: red;
+    background-color: #FC7DC9;
 }
