Попытка вынести стили в отдельный файл

--- a/src/assets/styles/eventTypes.css
+++ b/src/assets/styles/eventTypes.css
@@ -1,6 +1,6 @@
 .gray-background {
     background-color: #E9E9E8;
-    border: 1px solid #484848; /* Добавленный стиль для рамки */
+    border: 1px solid #484848;
 }
 
 .green-background {
