--- a/src/assets/styles/dataTableStyles.css
+++ b/src/assets/styles/dataTableStyles.css
@@ -1,5 +1,7 @@
 .custom-header-table th {
     color: #4E7AEC !important;
+    font-weight: 600 !important;
+    font-size: 16px !important;
 }
 
 .v-data-table-header {
