--- a/src/assets/styles/phoneMaskStyles.css
+++ b/src/assets/styles/phoneMaskStyles.css
@@ -2,16 +2,14 @@
     height: 32px;
     width: 100%;
     padding: 11px 14px;
-    margin-bottom: 36px;
+    /*margin-bottom: 12px;*/
+    margin-top: 24px;
     font-size: 1rem;
     line-height: 1.5;
     color: #383c42;
     background-color: #fff;
-
-    border: 1px solid rgba(0, 0, 0, 0.53); /* Add a solid border */
-    /*border-bottom: 1px solid rgba(0, 0, 0, 0.53); !* Add bottom border *!*/
+    border: 1px solid rgba(0, 0, 0, 0.53);
     border-radius: 12px;
-    /*transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;*/
 }
 
 .phone-field:focus {
