--- a/src/assets/styles/autorizationFormStyles.scss
+++ b/src/assets/styles/autorizationFormStyles.scss
@@ -96,15 +96,14 @@
 .mail-authorization-card {
     display: flex !important;
     flex-direction: column !important;
-    min-height: 28rem !important;
     width: 396px !important;
-    height: 396px !important;
+    height: 450px !important;
     
     &__title {
         font-weight: 700 !important;
         font-size: 32px !important;
         line-height: 37.5px !important;
-        padding: 0px 24px 10px !important;
+        padding: 0 24px 10px !important;
         margin-bottom: 16px !important;
     }
     &__subtitle {
