Исправление разъехавшегося текста. Небольшие стилистические исправления в шаблоне лекций

--- a/src/assets/styles/buttonStyles.css
+++ b/src/assets/styles/buttonStyles.css
@@ -26,3 +26,7 @@
     text-transform: unset !important;
     font-size: 1.125rem !important;
 }
+
+.v-btn {
+    letter-spacing: unset !important;
+}
