--- a/src/assets/styles/autorizationFormStyles.scss
+++ b/src/assets/styles/autorizationFormStyles.scss
@@ -177,7 +177,7 @@
     display: flex !important;
     flex-direction: column !important;
     width: 316px !important;
-    height: 322px !important;
+    //height: 322px !important;
 
     &__title {
         font-weight: 700 !important;
@@ -185,6 +185,7 @@
         line-height: 37.5px !important;
         padding: 0 24px 10px !important;
         margin-bottom: 16px !important;
+        word-break: keep-all;
     }
     &__subtitle {
         font-weight: 400 !important;
@@ -215,7 +216,7 @@
             text-transform: none !important;
             border-radius: 12px !important;
             padding: 0 !important;
-            margin: 16px 0 0 0 !important;
+            margin: 16px 0 16px 0 !important;
             width: 262px !important;
             height: 32px !important;
         }
